Add SSL setup scripts and HTTPS configuration for scholarport.co

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -53,12 +53,12 @@ server {
 # server {
 #     listen 443 ssl http2;
 #     listen [::]:443 ssl http2;
-#     server_name your-domain.com www.your-domain.com;  # Update with your domain
+#     server_name scholarport.co www.scholarport.co;
 #
 #     # SSL certificates
-#     ssl_certificate /etc/nginx/ssl/live/your-domain.com/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/your-domain.com/privkey.pem;
-#     ssl_trusted_certificate /etc/nginx/ssl/live/your-domain.com/chain.pem;
+#     ssl_certificate /etc/nginx/ssl/live/scholarport.co/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/scholarport.co/privkey.pem;
+#     ssl_trusted_certificate /etc/nginx/ssl/live/scholarport.co/chain.pem;
 #
 #     # SSL configuration
 #     ssl_protocols TLSv1.2 TLSv1.3;
