--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,8 +6,9 @@ limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
 limit_req_zone $binary_remote_addr zone=api:10m rate=30r/s;
 
 # Upstream backend server (if needed for API proxy)
+# Using HTTPS backend with SSL certificate
 upstream backend_server {
-    server ec2-43-205-95-162.ap-south-1.compute.amazonaws.com:8000;
+    server 43.205.95.162:443;
     keepalive 32;
 }
 
@@ -85,12 +86,14 @@ server {
     location /api/ {
         limit_req zone=api burst=50 nodelay;
 
-        # Forward to backend (trailing slash important for path rewriting)
-        proxy_pass http://backend_server/api/;
+        # Forward to HTTPS backend (self-signed cert, so verify off)
+        proxy_pass https://backend_server/api/;
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host ec2-43-205-95-162.ap-south-1.compute.amazonaws.com;
+        proxy_set_header Host 43.205.95.162;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -119,11 +122,13 @@ server {
 
     # WebSocket support
     location /ws/ {
-        proxy_pass http://backend_server/ws/;
+        proxy_pass https://backend_server/ws/;
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host ec2-43-205-95-162.ap-south-1.compute.amazonaws.com;
+        proxy_set_header Host 43.205.95.162;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
